--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -8,6 +8,15 @@ subject: Email design, templates and development
 <container>
 
   <spacer size="24"></spacer>
+
+  <row>
+    <columns small="12" large="12"></columns>
+  </row>
+  <row>
+    <columns>
+      <img src="../assets/img/lynk.png" alt="Lynk Kenya logo">
+    </columns>
+  </row>
   
   <row>
     <columns small="12">
