--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -28,7 +28,24 @@ subject: Email design, templates and development
       <p>The grand prize is  <strong>1 million years</strong> and life time Oreo supply!!</p>
     </columns>
   </row>
-  
+  <row>
+    <columns small="12" large="12">
+      <p>Full details about your life henceforth</p>
+    </columns>
+  </row>
+  <row>
+    <columns small="12" large="6">
+      <p>You have now become superhuman</p>      
+    </columns>
+    <columns small="12" large="6">
+      <p>This will be an awesome lifetime</p>
+    </columns>
+  </row>
+  <row>
+    <columns small="12" large="12">
+      <button>Become Tessie</button>
+    </columns>
+  </row>
 </container>
 
 <spacer size="16"></spacer>
