build the finished email

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -14,7 +14,7 @@ subject: Email design, templates and development
   </row>
   <row>
     <columns small="12" large="12">
-      <img src="../assets/img/lynk.png" alt="Lynk Kenya logo">
+      <img src="\.\./assets/img/lynk\.png" alt="Lynk Kenya logo">
       <p>Am not showing up</p>
     </columns>
   </row>
@@ -51,7 +51,7 @@ subject: Email design, templates and development
 <spacer size="16"></spacer>
 
 <center>
-  <small>Keep on keepin' on. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb.com/">ZURB</a> </small>
+  <small>Keep on keepin' on\. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb\.com/">ZURB</a> </small>
 </center>
 
 <spacer size="16"></spacer>
