--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -2,7 +2,11 @@
 layout: index-layout
 subject: Email design, templates and development
 ---
-
+<spacer size="16"></spacer>
+<center>
+  <small>This is the header section of the page</small>
+   <img src="../assets/img/lynk.png" alt="Lynk Kenya logo">
+</center>
 <spacer size="16"></spacer>
 
 <container>
@@ -14,18 +18,27 @@ subject: Email design, templates and development
   </row>
   <row>
     <columns small="12" large="12">
-      <img src="\.\./assets/img/lynk\.png" alt="Lynk Kenya logo">
-      <p>Am not showing up</p>
+      <p><strong>Hello Tessie!!</strong></p>
     </columns>
   </row>
   <row>
     <columns small="12" large="12">
-      <p><strong>Hello Tessie!!</strong> We got news for you: You have been selected as the most funny human on mars!!</p>
+      <p>Thanks for chosing lynk!</p>
     </columns>
   </row>
   <row>
+    <columns>
+      <p>Your request is being processed.</p>
+      <p>We will get back to you within 24hrs</p><br>
+      <p>Asante!</p>
+    </columns>
+  </row>
+  <hr>
+  <row>
     <columns small="12" large="12">
-      <p>The grand prize is  <strong>1 million years</strong> and life time Oreo supply!!</p>
+      <center>
+        <p>The grand prize is  <strong>1 million years</strong> and life time Oreo supply!!</p>
+      </center>
     </columns>
   </row>
   <row>
@@ -51,7 +64,8 @@ subject: Email design, templates and development
 <spacer size="16"></spacer>
 
 <center>
-  <small>Keep on keepin' on\. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb\.com/">ZURB</a> </small>
+  <small>This is the footer section</small><br>
+  <small>This email was sent to you by Lynk Jobs Ltd</small>
 </center>
 
 <spacer size="16"></spacer>
