add spacer before the header image

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -4,8 +4,15 @@ subject: Email design, templates and development
 ---
 <spacer size="16"></spacer>
 <center>
-  <small>This is the header section of the page</small>
-   <img src="../assets/img/lynk.png" alt="Lynk Kenya logo">
+  <small class="text-center">This is the header section of the page</small>
+  <spacer size="16"></spacer>
+   <row>
+     <columns small="12" long="12">
+       <center>
+         <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="500" height="600">
+       </center>
+     </columns>
+   </row>
 </center>
 <spacer size="16"></spacer>
 
@@ -18,7 +25,7 @@ subject: Email design, templates and development
   </row>
   <row>
     <columns small="12" large="12">
-      <p><strong>Hello Tessie!!</strong></p>
+      <p class="text-center"><strong>Hello Tessie!!</strong></p>
     </columns>
   </row>
   <row>
