fix body layout

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -6,13 +6,6 @@ subject: Email design, templates and development
 <center>
   <small class="text-center">This is the header section of the page</small>
   <spacer size="16"></spacer>
-   <row>
-     <columns small="12" long="12">
-       <center>
-         <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="500" height="600">
-       </center>
-     </columns>
-   </row>
 </center>
 <spacer size="16"></spacer>
 
@@ -20,32 +13,30 @@ subject: Email design, templates and development
 
   <spacer size="24"></spacer>
 
-  <row>
-    <columns small="12" large="12"></columns>
-  </row>
+   <row>
+     <columns small="12" long="12">
+       <center>
+         <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="500" height="600">
+       </center>
+     </columns>
+   </row>
   <row>
     <columns small="12" large="12">
-      <p class="text-center"><strong>Hello Tessie!!</strong></p>
-    </columns>
-  </row>
-  <row>
-    <columns small="12" large="12">
-      <p>Thanks for chosing lynk!</p>
-    </columns>
-  </row>
-  <row>
-    <columns>
+      <p>Hello Tessie,</p>
+      <spacer size="10"></spacer>
+      <p>Thanks for chosing Lynk</p>
+      <spacer size="10"></spacer>
       <p>Your request is being processed.</p>
-      <p>We will get back to you within 24hrs</p><br>
+      <p>We will get back to you within 24hrs</p>
+      <spacer size="10"></spacer>
       <p>Asante!</p>
     </columns>
   </row>
   <hr>
+
   <row>
     <columns small="12" large="12">
-      <center>
-        <p>The grand prize is  <strong>1 million years</strong> and life time Oreo supply!!</p>
-      </center>
+        <p class="text-center">Explore top services</strong></p>
     </columns>
   </row>
   <row>
