design the footer layout

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -37,24 +37,19 @@ subject: Email design, templates and development
   <row>
     <columns small="12" large="12">
         <p class="text-center">Explore top services</strong></p>
+        <spacer size="10"></spacer>
     </columns>
   </row>
   <row>
-    <columns small="12" large="12">
-      <p>Full details about your life henceforth</p>
+    <columns size="12" large="6">
+      <center>
+          <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="200" height="200">
+      </center>
     </columns>
-  </row>
-  <row>
-    <columns small="12" large="6">
-      <p>You have now become superhuman</p>      
-    </columns>
-    <columns small="12" large="6">
-      <p>This will be an awesome lifetime</p>
-    </columns>
-  </row>
-  <row>
-    <columns small="12" large="12">
-      <button>Become Tessie</button>
+    <columns size="12" large="6">
+      <center>
+          <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="200" height="200">
+      </center>
     </columns>
   </row>
 </container>
@@ -62,8 +57,12 @@ subject: Email design, templates and development
 <spacer size="16"></spacer>
 
 <center>
-  <small>This is the footer section</small><br>
-  <small>This email was sent to you by Lynk Jobs Ltd</small>
+  <p class="text-center">This email was sent to you by Lynk Jobs Ltd.</p>
+  <spacer size="10"></spacer>
+  <p class="text-center">Lynk Jobs Ltd | 10 Boundary Lane | Contact Us</p>
+  <spacer size="10"></spacer>
+  <p class="text-center"><strong>Become a Pro | Recommend a Pro | Terms and Conditions</strong></p>
+
 </center>
 
 <spacer size="16"></spacer>
