add a _custom.scss file

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -2,12 +2,7 @@
 layout: index-layout
 subject: Email design, templates and development
 ---
-<spacer size="16"></spacer>
-<center>
-  <small class="text-center">This is the header section of the page</small>
-  <spacer size="16"></spacer>
-</center>
-<spacer size="16"></spacer>
+<spacer size="30"></spacer>
 
 <container>
 
@@ -24,7 +19,7 @@ subject: Email design, templates and development
     <columns small="12" large="12">
       <p>Hello Tessie,</p>
       <spacer size="10"></spacer>
-      <p>Thanks for chosing Lynk</p>
+      <p class="tessie">Thanks for chosing Lynk2</p>
       <spacer size="10"></spacer>
       <p>Your request is being processed.</p>
       <p>We will get back to you within 24hrs</p>
