fix alt in images

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -3,7 +3,10 @@ layout: index-layout
 subject: Email design, templates and development
 ---
 <spacer size="30"></spacer>
-
+<center>
+  <img src="../assets/img/lynk.png" alt="lynk logo" width="50" height="50">
+</center>
+<spacer size="10"></spacer>
 <container>
 
   <spacer size="24"></spacer>
@@ -11,20 +14,20 @@ subject: Email design, templates and development
    <row>
      <columns small="12" long="12">
        <center>
-         <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="500" height="600">
+         <img src="../assets/img/banner.png" alt="Lynk Kenya logo" width="200" height="300">
        </center>
      </columns>
    </row>
-  <row>
+  <row class="message">
     <columns small="12" large="12">
-      <p>Hello Tessie,</p>
+      <p class="message">Hello Tessie,</p>
       <spacer size="10"></spacer>
-      <p class="tessie">Thanks for chosing Lynk2</p>
+      <p class="message">Thanks for chosing Lynk2</p>
       <spacer size="10"></spacer>
-      <p>Your request is being processed.</p>
-      <p>We will get back to you within 24hrs</p>
+      <p class="message">Your request is being processed.</p>
+      <p class="message">We will get back to you within 24hrs</p>
       <spacer size="10"></spacer>
-      <p>Asante!</p>
+      <p class="message">Asante!</p>
     </columns>
   </row>
   <hr>
@@ -38,15 +41,18 @@ subject: Email design, templates and development
   <row>
     <columns size="12" large="6">
       <center>
-          <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="200" height="200">
+          <img src="../assets/img/yoga.png" alt="Yoga Category image" width="200" height="200">
+          <p class="text-center"><a href="https://lynk.co.ke">Yoga trainers</p>
       </center>
     </columns>
     <columns size="12" large="6">
       <center>
-          <img src="../assets/img/lynk.png" alt="Lynk Kenya logo" width="200" height="200">
+          <img src="../assets/img/yoga.png" alt="Yoga Category image" width="200" height="200">
+           <p class="text-center"><a href="https://lynk.co.ke">Yoga trainers</p>
       </center>
     </columns>
   </row>
+  <spacer class="10"></spacer>
 </container>
 
 <spacer size="16"></spacer>
