add image url and fix logo position

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -3,14 +3,14 @@ layout: index-layout
 subject: Email design, templates and development
 ---
 <spacer size="30"></spacer>
-<center>
-  <img src="../assets/img/lynk.png" alt="lynk logo" width="50" height="50">
-</center>
-<spacer size="10"></spacer>
 <container>
+  <spacer size="10"></spacer>
+  <a href="https://files.lynk.co.ke/img/lynk_logo.png" class="logo">
+    <img src="https://files.lynk.co.ke/img/lynk_logo.png" alt="Couple of Creatives Logo" width="50" height="50" class="text-center logo" />
+  </a>
 
   <spacer size="24"></spacer>
-
+  
    <row>
      <columns small="12" long="12">
        <center>
@@ -30,11 +30,14 @@ subject: Email design, templates and development
       <p class="message">Asante!</p>
     </columns>
   </row>
-  <hr>
+  <hr class="divider">
+  <center>
+    <button href="#" class="btn">Book a pro</button>
+  </center>
 
   <row>
     <columns small="12" large="12">
-        <p class="text-center">Explore top services</strong></p>
+        <h4 class="text-center">Explore top services</strong></h4>
         <spacer size="10"></spacer>
     </columns>
   </row>
@@ -62,7 +65,8 @@ subject: Email design, templates and development
   <spacer size="10"></spacer>
   <p class="text-center">Lynk Jobs Ltd | 10 Boundary Lane | Contact Us</p>
   <spacer size="10"></spacer>
-  <p class="text-center"><strong>Become a Pro | Recommend a Pro | Terms and Conditions</strong></p>
+  <p class="text-center"><small>
+    <a href="#">Become a Pro | Recommend a Pro | Terms and Conditions</a></small></p>
 
 </center>
 
