some changes in the index page

--- a/emails/src/pages/index.html
+++ b/emails/src/pages/index.html
@@ -3,12 +3,14 @@ layout: index-layout
 subject: Email design, templates and development
 ---
 <spacer size="30"></spacer>
-<container>
-  <spacer size="10"></spacer>
-  <a href="https://files.lynk.co.ke/img/lynk_logo.png" class="logo">
+<a href="https://files.lynk.co.ke/img/lynk_logo.png" class="logo">
     <img src="https://files.lynk.co.ke/img/lynk_logo.png" alt="Couple of Creatives Logo" width="50" height="50" class="text-center logo" />
   </a>
+<spacer size="30"></spacer>
 
+<container>
+  <spacer size="10"></spacer>
+  
   <spacer size="24"></spacer>
   
    <row>
@@ -18,7 +20,7 @@ subject: Email design, templates and development
        </center>
      </columns>
    </row>
-  <row class="message">
+  <row>
     <columns small="12" large="12">
       <p class="message">Hello Tessie,</p>
       <spacer size="10"></spacer>
@@ -61,11 +63,11 @@ subject: Email design, templates and development
 <spacer size="16"></spacer>
 
 <center>
-  <p class="text-center">This email was sent to you by Lynk Jobs Ltd.</p>
+  <p class="text-center footer-padding">This email was sent to you by Lynk Jobs Ltd.</p>
   <spacer size="10"></spacer>
-  <p class="text-center">Lynk Jobs Ltd | 10 Boundary Lane | Contact Us</p>
+  <p class="text-center footer-padding">Lynk Jobs Ltd | 10 Boundary Lane | Contact Us</p>
   <spacer size="10"></spacer>
-  <p class="text-center"><small>
+  <p class="text-center footer-padding"><small>
     <a href="#">Become a Pro | Recommend a Pro | Terms and Conditions</a></small></p>
 
 </center>
